--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,11 @@
     align-self: center;
 }
 
-.base {
-    /* background-image: url("/images/blue-snow.webp"); */
-    background-color: "red";
+.store-form {
+    width: 50%;
+    align-self: center;
+}
+
+.navbar-button {
+    margin-left: 1ch;
 }
