--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,16 @@
 .navbar-button {
     margin-left: 1ch;
 }
+
+.debug-icon {
+    background: url("images/bug.svg");
+    height: 16px;
+    width: 32px;
+    display: block;
+    background-repeat: no-repeat;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
+    justify-self: center;
+    /* Other styles here */
+}
